2005-07-12  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.__contains__): Clean up, 
	use == instead of is
	(List.__setitem__, List.__getitem__): Support strings, refactor
	(List.__iter__): Impl.

2005-07-11  Johan Dahlin  <jdahlin@async.com.br>

	* examples/completion.py:
	* gazpacho-plugin/kiwi2.xml: 
	* kiwi/ui/widgets/entry.py:

	Add entry completion support and a small example.

== 1.9.0 released ==
2005-06-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/__init__.py: Kill pygtk.require() it won't be missed since 
	all systems which we can run on has pygtk 2.x installed as default. 
	Should also speed up imports.

	* kiwi/__init__.py:
	* kiwi/environ.py:
	* kiwi/interfaces.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/loader.py:
	* kiwi/ui/views.py:

	Kill loader. Move glade/imagepath handling to kiwi.environ.
	Move abstract adaptor to kiwi.interfaces

2005-06-28  Johan Dahlin  <jdahlin@async.com.br>

	* README:
	* kiwi/__init__.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/loader.py:
	* kiwi/ui/views.py:

	How much I hate this, but: Write a libglade loader to use as fallback
	when gazpacho cannot be found. Add a hook to require gazpacho.

2005-06-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/views.py: Allow us to function without a broker.

	* kiwi/ui/gadgets.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/utils.py:

	Move gtk related functions from kiwi.utils to kiwi.ui.gadgets

2005-06-27  Johan Dahlin  <jdahlin@async.com.br>

	* examples/PersonalInformation/personalinformation.py:
	* kiwi/initgtk.py:
	* kiwi/ui/__init__.py:
	* kiwi/ui/views.py:
	* kiwi/ui/wizard.py:

	Kill initgtk, move quit_if_last to views and 
	pygtk.require() to kiwi.ui, adds a warning.

2005-06-27  Johan Dahlin  <jdahlin@async.com.br>

	* examples/PersonalInformation/personalinformation.glade:
	* examples/PersonalInformation/personalinformation.py: